# multi-chain-wallet-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindSodium.cmake
include/wallet/chains/: ChainRegistry.h  IChain.h
include/wallet/chains/bitcoin/: BitcoinChain.h
include/wallet/chains/ethereum/: EthereumChain.h
include/wallet/chains/solana/: SolanaChain.h
include/wallet/core/: HDWallet.h  KeyPair.h  Mnemonic.h  SecureAllocator.h
include/wallet/crypto/: ECDSA.h  Ed25519.h  Hash.h
include/wallet/utils/: Base58.h  Bech32.h  Hex.h  RLP.h
src/chains/: ChainRegistry.cpp
src/chains/bitcoin/: BitcoinChain.cpp
src/chains/ethereum/: EthereumChain.cpp
src/chains/solana/: SolanaChain.cpp
src/core/: HDWallet.cpp  KeyPair.cpp  Mnemonic.cpp
src/crypto/: ECDSA.cpp  Ed25519.cpp  Hash.cpp
src/utils/: Base58.cpp  Bech32.cpp  Hex.cpp  RLP.cpp
tests/: CMakeLists.txt  test_bitcoin.cpp  test_crypto.cpp  test_ethereum.cpp  test_key_derivation.cpp  test_mnemonic.cpp  test_solana.cpp
